--- a/index.html
+++ b/index.html
@@ -56,20 +56,113 @@
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	 				<h1>Hello! I'm Michelle Kim, a Product Designer</div></div>
+	 				<h1>Michelle Kim - Product Designer</div></div>
 						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-<h1 style="padding-top: 1%;font-size: 22px;  letter-spacing: 0em;  font-weight: normal; line-height: 140%;">
-I'm an incoming product designer at <a target="_blank" href="https://www.linkedin.com/company/hiextend/">Extend, Inc</a> in San Francisco, CA. I received my masters in human-computer interaction from <a target="_blank" href="https://www.si.umich.edu/">Michigan</a> in May 2020. During grad school, I was a UX Design Intern at <a target="_blank" href="https://www.linkedin.com/company/lexmark/">Lexmark</a>. I am no longer looking for a full time opportunity, but please feel free to <a target="_blank" href="mailto:minjin@umich.edu">email</a> me for anything else! Thank you for visiting.</h1>
-</h1>
+							<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
-</div></div>
+						<h2 style="padding-right:1.5em;">My STEM background has helped me become a designer who supports every design decision with data and rationale. I am comfortable working in complex problem spaces and looking to make an impact.
+</h2>
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+
+</div></div></div>
 </div>
 			</section>
 
 
 
 
+	<section id="content" style="padding-bottom:6em;">
+		<div class="container"  style="max-width:900px;">
+			<a href="lexmark.html">
+			<div class="project img-hover-zoom">
+					<div class="row box" style="background-color: #E3F0e6;">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+							<div style="padding-left: 3em; padding-top:4em;">
+								<h4>INTERNSHIP &bull; INTERNAL ADMIN TOOL</h4>
+								<p>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </p>
+							</div>
+							<div style="padding-top:0em;padding-left:3em;">
+								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay="0.6s">
+							<a href="lexmark.html">
+							<img style="width:100%;" src="images/lexmarkindex.png"></a>
+						</div>
+					</div>
+			</div>
+		</a>
+
+
+		<a href="thrive.html">
+	<div class="project img-hover-zoom">
+					<div class="row box" style="background-color: #E0F0F6;">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+							<div style="padding-left: 3em; padding-top:4em;">
+								<h4>iOS &bull; SIDE PROJECT &bull;  BEHAVIORAL CHANGE</h4>
+								<p>Designing to help people <span style="color:#1c84b1 ;">eat less meat</span></p>
+							</div>
+							<div style="padding-top:1em;padding-left:3em;">
+								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay="0.6s" style="background-color: #E0F0F6">
+							<a href="thrive.html">
+							<img style="width:100%;" src="images/thriveindex.png"></a>
+						</div>
+					</div>
+			</div>
+		</a>
+		<a href="pawls.html">
+
+			<div class="project img-hover-zoom">
+					<div class="row box" style="background-color: #E5EAFB">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+							<div style="padding-left: 3em; padding-top:4em;">								<h4>COURSE PROJECT  &bull; PERVASIVE COMPUTING</h4>
+
+								<p>Designing an <span style="color:#2048CB;">IoT</span> to help decrease barking in dogs</p>
+							</div>
+							<div style="padding-left: 0em;padding-top:1em;">
+							<!-- <a class="button" href="pawls.html">View Case Study</a> -->
+						</div></div>
+
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay=".5s" style="background-color: #E5EAFB; padding-top:1.25em;">
+							<a href="pawls.html">
+
+							<img style="width:100%;" src="images/pawlsindex.png"></a>
+						</div>
+
+
+					</div>
+			</div>
+		</a>
+
+		<a href="vrgarden.html">
+			<div class="project img-hover-zoom">
+					<div class="row box" style="background-color:#ffe3e3">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+
+
+							<div style="padding-left: 3em; padding-top:4em;">
+								<h4>COURSE PROJECT  &bull; GOOGLE CARDBOARD</h4>
+
+								<p>Building a <span style="color:#C20000 ;">virtual reality</span> gardening  app </p>
+							</div>
+							<div style="padding-left: 3em;padding-top:1em;">
+							<!-- <a class="button" href="vrgarden.html">View Case Study</a> -->
+						</div></div>
+
+
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft box" data-wow-delay=".5s" style="background-color: #FFE3E3">
+							<a href="vrgarden.html">
+
+							<img style="width:100%; padding-top:.5em; padding-bottom:.5em;" src="images/vrgardenindex.png"></a>
+						</div>
+			</div>
+		</div>
+	</a>
+</div>
 
 
 	</section>
@@ -89,7 +182,16 @@ I'm an incoming product designer at <a target="_blank" href="https://www.linkedi
 <script src="js/custom.js"></script>
 
 
+<div class="row project">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
+<div class="custom-end">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<hr>
+	<p style="font-family:'Muli', Sans-serif; font-size:14px;">© 2020 Designed & Coded by 🙋🏻‍♀️</p>
+</div>
+</div>
+</div>
 
 
 </body>
